# Shit-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
include/engine/: graphics.hpp  sh_engine.hpp  utiles.hpp
include/glad/: glad.h
src/: glad.c
src/engine/: graphics.cpp  sh_engine.cpp  utiles.cpp
